--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <div class="tiles-header-row tiles-header-row-bottom">
     <div id="trip-name-summary" class="trip-name-summary"></div>
     <div class="tiles-header-actions">
-      <button id="add-hotel-btn" class="btn btn-ghost" disabled>
+      <button id="add-hotel-btn" class="btn btn-primary" disabled>
         <span class="btn-icon">🏨</span>
         <span>Add hotel</span>
       </button>
