Flight validation update .html

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div>
           <div class="card-title">New flight</div>
           <div class="card-subtitle">
-            Step 2 – add a flight to the selected trip.
+            add a flight to the selected trip.
           </div>
         </div>
       </div>
@@ -160,7 +160,7 @@
               autocomplete="off"
               required
             />
-            <small>2 airline characters + 1–4 digits, e.g. BA2785.</small>
+            <small>2–3 airline characters + 1–4 digits, e.g. BA2785 or EZY8449.</small>
             <div id="flight-error" class="field-error" aria-live="polite"></div>
           </div>
 
