Show storage usage in header

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <span id="api-key-status" class="api-status-text">
           Checking API key…
         </span>
+        <span id="storage-usage" class="api-status-text">
+          Storage: --
+        </span>
         <div class="topbar-actions">
           <button id="import-json" class="btn btn-ghost btn-xs">
             <span class="btn-icon">⬆︎</span>
