Update header title and remove subtitle

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
       <div class="topbar-left">
         <div class="topbar-icon">✈︎</div>
         <div class="topbar-text">
-          <div class="topbar-title">Flight Log</div>
-          <div class="topbar-subtitle">
-            Personal travel diary – trips, flights, hotels &amp; PNRs.
-          </div>
+          <div class="topbar-title">Travel Managers</div>
         </div>
       </div>
       <div class="topbar-right">
