Added apple icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Flight Log</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 </head>
 <body>
   <div class="app-shell">
