--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Flight Log</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" href="icon/apple-touch-icon.png" />
 </head>
 <body>
   <div class="app-shell">
@@ -287,3 +287,4 @@
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
+
