Keep config upload option visible

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <div id="api-key-status-menu" class="menu-status-text">Checking API key…</div>
               <div id="storage-usage-menu" class="menu-status-text">Storage: --</div>
             </div>
-            <button id="config-upload-btn" class="menu-item hidden" role="menuitem">
+            <button id="config-upload-btn" class="menu-item" role="menuitem">
               Upload config.json
             </button>
             <button id="import-json" class="menu-item" role="menuitem">
