--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
             Select a passenger to view days by country.
           </div>
           <div id="daycount-results" class="daycount-grid"></div>
+
+          <div class="card-subtitle" style="margin-top:12px;">Upcoming flights</div>
+          <div id="daycount-upcoming-empty" class="tiles-empty">No upcoming flights.</div>
+          <div id="daycount-upcoming-list" class="upcoming-list"></div>
         </div>
       </section>
     </div>
@@ -341,4 +345,3 @@
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
-
