Mobile map fullscreen and badge toggle

--- a/index.html
+++ b/index.html
@@ -236,6 +236,20 @@
             </div>
           </div>
 
+          <div class="button-row map-actions">
+            <button id="map-fullscreen-btn" class="btn btn-ghost btn-xs" type="button">
+              Full screen
+            </button>
+            <button
+              id="map-badges-btn"
+              class="btn btn-ghost btn-xs"
+              type="button"
+              aria-pressed="true"
+            >
+              Hide badges
+            </button>
+          </div>
+
           <div id="map-empty" class="tiles-empty">
             Add flights to visualize them on a map.
           </div>
