Hide past trips by default

--- a/index.html
+++ b/index.html
@@ -103,9 +103,16 @@
                   placeholder="e.g. Japan 2025"
                   autocomplete="off"
                 />
-              </div>
+               </div>
+             </div>
+
+            <div class="trip-options-row">
+              <label class="checkbox-inline" for="trip-show-past">
+                <input id="trip-show-past" type="checkbox" />
+                <span>Show past trips</span>
+              </label>
             </div>
-            <div id="trip-error" class="field-error" aria-live="polite"></div>
+             <div id="trip-error" class="field-error" aria-live="polite"></div>
 
             <!-- Action Buttons -->
             <div class="control-grid">
