--- a/index.html
+++ b/index.html
@@ -416,10 +416,42 @@
 
   <!-- Bottom navigation (mobile) -->
   <nav class="bottom-nav">
-    <button id="nav-trips" class="nav-btn active" data-screen="trips">Trips</button>
-    <button id="nav-daycount" class="nav-btn" data-screen="daycount">Days</button>
-    <button id="nav-upcoming" class="nav-btn" data-screen="upcoming">Upcoming</button>
-    <button id="nav-map" class="nav-btn" data-screen="map">Map</button>
+    <button id="nav-trips" class="nav-btn active" data-screen="trips">
+      <span class="nav-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M8 6h8a1 1 0 0 1 1 1v2H7V7a1 1 0 0 1 1-1z" />
+          <rect x="4" y="9" width="16" height="11" rx="2" />
+          <path d="M9 13h6" />
+        </svg>
+      </span>
+      <span class="nav-label">Trips</span>
+    </button>
+    <button id="nav-daycount" class="nav-btn" data-screen="daycount">
+      <span class="nav-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="4" y="5" width="16" height="15" rx="2" />
+          <path d="M8 3v4M16 3v4M4 9h16" />
+        </svg>
+      </span>
+      <span class="nav-label">Days</span>
+    </button>
+    <button id="nav-upcoming" class="nav-btn" data-screen="upcoming">
+      <span class="nav-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="currentColor" stroke="none">
+          <path d="M2 16l20-5-20-5 5 5-5 5z" />
+        </svg>
+      </span>
+      <span class="nav-label">Upcoming</span>
+    </button>
+    <button id="nav-map" class="nav-btn" data-screen="map">
+      <span class="nav-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M3 6l6-2 6 2 6-2v14l-6 2-6-2-6 2z" />
+          <path d="M9 4v14M15 6v14" />
+        </svg>
+      </span>
+      <span class="nav-label">Map</span>
+    </button>
   </nav>
 
   <!-- Note: type="module" is required for the modular JS to work -->
